group 'com.cleancode'
version '1.0-SNAPSHOT'

subprojects {
    apply plugin: 'java-library'

    repositories {
        mavenCentral()
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.0'
        testImplementation 'org.assertj:assertj-core:3.21.0'

        testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.0'

    }

    tasks.withType(JavaCompile) {
        options.compilerArgs += ['--enable-preview']
    }

    test {
        useJUnitPlatform()
        jvmArgs += ['--enable-preview']
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(17)
        }
    }

}